--- a/main.html
+++ b/main.html
@@ -266,7 +266,7 @@ _New RStudio Project_
 Clique em _File_ -&gt; _New File_ -&gt; _R Markdown_ -&gt; _From Template_ 
 -&gt; _Interactive Tutorial_ -&gt; _OK_
 
-![Arquivo Inicial]()
+![Arquivo Inicial](https://raw.githack.com/fsbmat-ufv/PROFMAT2024/main/img/Learn1.PNG)
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
