--- a/main.html
+++ b/main.html
@@ -83,10 +83,11 @@ src='img/ssmodels.png' width="150px"&gt;&lt;/a&gt;
 
 &lt;a href='https://ctan.org/pkg/figchild'&gt;  &lt;img src='img/PacFigchild.png' width="150px"&gt;&lt;/a&gt;
 
+
+
+
+&lt;!--
 &lt;a href='https://github.io/fsbmat-ufv/'&gt;  &lt;img img src='img/figchild.png' width="150px"&gt;&lt;/a&gt;
-
-
-
 &lt;a href='https://saopaulo2019.satrdays.org/'&gt;  &lt;img src='img/Hex/2satrdaysp.png' 
 width="150px"&gt;&lt;/a&gt;
 &lt;a href='https://latin-r.com/'&gt;  &lt;img src='img/Hex/4LatinR_hex_violeta-cut.jpg' 
@@ -103,7 +104,7 @@ src='https://beatrizmilz.github.io/mananciais/reference/figures/hexlogo.png'
 width="150px"&gt;&lt;/a&gt;
 &lt;/center&gt;
 
-
+--&gt;
 ---
 
 ## Proposta do Projeto
@@ -267,6 +268,26 @@ Clique em _File_ -&gt; _New File_ -&gt; _R Markdown_ -&gt; _From Template_
 -&gt; _Interactive Tutorial_ -&gt; _OK_
 
 ![Arquivo Inicial](https://raw.githack.com/fsbmat-ufv/PROFMAT2024/main/img/Learn1.PNG)
+
+---
+
+![Arquivo 2](https://raw.githack.com/fsbmat-ufv/PROFMAT2024/main/img/Learnr2.PNG)
+
+---
+
+## Alteração do yaml e criação de exercícios
+
+Vou mostrar como criar o seguinte tutorial: 
+[Clique Aqui!](https://pibicest.shinyapps.io/Tutorial/)
+
+---
+
+## Disponibilizar Online
+
+Clique em Publish e Instale os pacotes solicitados. Escolha posteriormente conectar em uma 
+conta e escolha ShinyApps.io (Você terá que entrar em sua conta que já está criada) e 
+copiar o token da conta, posteriormente clique em ShinyApps.io e acrescente seu token, clique em conectar e publicar!
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
