--- a/main.html
+++ b/main.html
@@ -96,7 +96,7 @@ Sugerimos que você assista essa palestra em um computador de mesa ou notebook, 
 
 - Realizou três IC's (Geometria Algébrica, Análise na Reta e Estatística) 
 
-- Tem interesse continuar os estudos na área de Estatística!
+- Tem interesse de continuar os estudos na área de Estatística!
 ]
 
 .pull-right[
@@ -146,6 +146,21 @@ em cursos de graduação, utilizando o &lt;em&gt;software R&lt;/em&gt; e pacotes
 &lt;/p&gt;
 
 
+
+ - Inicialmente, foi realizado uma discussão entre a bolsista do projeto e o orientador 
+ e também professor da disciplina de Estatística I (EST 106), ofertada para alunos dos 
+ cursos de Ciências Exatas da UFV, sobre requisitos e necessidades específicas dos 
+ estudantes e professores na área de Estatística básica.
+ 
+ - Pesquisamos, sites de professores no Brasil e no mundo de diversas instituições 
+ e elaboramos uma lista com roteiros de aulas, apostilas, livros utilizados na 
+ graduação, \textit{applets}, aplicativos e ferramentas práticas para identificar 
+ materiais estatísticos relevantes e as possibilidades de uso, transformação de 
+ materiais ou criação de novas ferramentas para o ensino.
+ 
+ - Identificamos materiais interessantes, _applets_, _softwares_, listas de 
+ exercícios, entre outras ideias e trabalhos...
+ 
 ---
 
 ## Começo do Trabalho
@@ -187,7 +202,7 @@ diante!
 &lt;/br&gt;
   &lt;li style="text-align: justify;"&gt;
 Criamos então um código em linguagem R que faz a leitura dos dados, transforma tudo 
-em caiixa alta, remove acentos e caracteres especiais, corrige alguns desses erros 
+em caixa alta, remove acentos e caracteres especiais, corrige alguns desses erros 
 que já apareceram no banco de dados e apresenta as tabelas e gráficos corrigidos 
 ou próximo do melhor resultado. É fato que semestralmente, mudanças precisam ser 
 realizadas nos códigos! 
@@ -337,6 +352,19 @@ Vou mostrar como criar o seguinte tutorial:
 Clique em Publish e Instale os pacotes solicitados. Escolha posteriormente conectar em uma 
 conta e escolha ShinyApps.io (Você terá que entrar em sua conta que já está criada) e 
 copiar o token da conta, posteriormente clique em ShinyApps.io e acrescente seu token, clique em conectar e publicar!
+&lt;/p&gt;
+
+---
+
+## Agradecemos a presença de todos!
+
+
+&lt;p style="text-align: justify;"&gt;
+Foi um prazer compartilhar este trabalho sobre o learnR e sua aplicação na criação de materiais interativos.
+
+Acreditamos que o uso de materiais interativos representa uma poderosa ferramenta pedagógica, pois promove a autonomia dos alunos, facilita o aprendizado de conceitos complexos e fomenta um ambiente mais dinâmico e engajador em sala de aula.
+
+Estamos à disposição para esclarecer dúvidas, trocar ideias e discutir possibilidades de implementação. Contem conosco para explorar ainda mais o potencial do learnR na educação!
 &lt;/p&gt;
 
     </textarea>
