--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <link href="main_files/xaringanExtra-clipboard/xaringanExtra-clipboard.css" rel="stylesheet" />
     <script src="main_files/xaringanExtra-clipboard/xaringanExtra-clipboard.js"></script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
-    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="style2.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -33,7 +33,6 @@ class: center, middle, inverse, title-slide
 ]
 
 ---
-
 
 
 
